[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/man/man22a_cl.jpg" type="Texture2D" id=1]
[ext_resource path="res://addons/egoventure/nodes/hotspots/hotspot.gd" type="Script" id=2]
[ext_resource path="res://images/man/hs/man_file.png" type="Texture2D" id=3]
[ext_resource path="res://scenes/man/man22a_cl.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="man_rag" type="TextureButton" parent="."]
offset_left = 706.0
offset_top = 582.0
offset_right = 1067.0
offset_bottom = 952.0
mouse_default_cursor_shape = 16
texture_normal = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 8
target_scene = "res://scenes/man/man22a_lift.tscn"

[node name="Hotspot" type="TextureButton" parent="."]
offset_left = 1869.96
offset_top = 466.696
offset_right = 2230.96
offset_bottom = 820.696
mouse_default_cursor_shape = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 8

[node name="Hotspot2" type="TextureButton" parent="."]
offset_left = -9.52441
offset_top = 1101.66
offset_right = 2586.48
offset_bottom = 1455.66
mouse_default_cursor_shape = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 2
target_scene = "res://scenes/man/man22.tscn"
target_view = "front"

[connection signal="pressed" from="man_rag" to="." method="_on_man_rag_pressed"]
[connection signal="pressed" from="Hotspot" to="." method="_on_Hotspot_pressed"]
